# CodeSecTools

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  catb.py  cli.html  docker-compose.yml  gen_pages.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sastb  sastb.py  sastb.sh  utils.py
.github/workflows/: ci.yaml  deploy-docs.yaml  docs.yaml  run-tests.yaml
CATs/Coverity/: analyzer.py  main.py  parser.py
SASTs/: README.md
SASTs/Coverity/: analyzer.py  cli.py  main.py  parser.py
SASTs/Semgrep/: analyzer.py  cli copy.py  cli.py  constants.py  parser.py
SASTs/_base/: cli.py  parser.py
api/: allsast.html  dataset.html  index.html  sast.html  shared.html
assets/: extra.css  overview.excalidraw
codesectools/: __main__.py  cli.py  main.py  utils.py
codesectools/datasets/: __init__.py
codesectools/datasets/BenchmarkJava/: __init__.py  dataset.py
codesectools/datasets/CVEfixes/: __init__.py  dataset.py  extract.py
codesectools/datasets/JulietTestSuiteC/: __init__.py  dataset.py
codesectools/datasets/SemgrepCERules/: __init__.py  dataset.py
codesectools/datasets/SemgrepTest/: __init__.py  dataset.py  helper.py
codesectools/datasets/core/: __init__.py  cli.py  dataset.py
codesectools/sasts/: __init__.py
codesectools/sasts/Bearer/: cli.py  parser.py  sast.py
codesectools/sasts/Coverity/: __init__.py  cli.py  config.py  parser.py  sast.py
codesectools/sasts/Semgrep/: __init__.py  cli.py  constants.py  parser.py  sast.py
codesectools/sasts/SemgrepCE/: cli.py  constants.py  parser.py  sast.py
codesectools/sasts/SnykCode/: cli.py  parser.py  sast.py
codesectools/sasts/all/: __init__.py  cli.py  graphics.py  parser.py  report.py  sast.py
codesectools/sasts/core/: __init__.py  cli.py  graphics.py  parser.py  sast.py
codesectools/shared/: cloc.py  cwe.py  docker.py
data/: README.md
data/cwe/: __init__.py
dataset/: index.html
dataset/profiles/: benchmarkjava.yaml  cvefixes.yaml  juliettestsuitec.yaml  semgrepcerules.yaml
dataset/supported/: benchmarkjava.j2.html  cvefixes.j2.html  index.html  juliettestsuitec.j2.html  semgrepcerules.j2.html
datasets/: CVEfixes_Java.sql  README.md  __init__.py
datasets/BenchmarkJava/: dataset.py  helper.py  stats.py
datasets/CVEfixes/: CVEfixes_java.csv  dataset.py  extract.py  helper.py  main.py  stats.py
datasets/CVEfixes/data/: .gitignore
datasets/SemgrepTest/: dataset.py  downloader.py  helper.py  stats.py
datasets/_base/: dataset.py
docs/: cli.md  gen_pages.py
docs/api/: allsast.md  datasets.md  index.md  sasts.md  shared.md
docs/assets/: extra.css
docs/dataset/: index.md
docs/dataset/profiles/: benchmarkjava.yaml  cvefixes.yaml  semgrepcerules.yaml
docs/datasets/: api.md  benchmarkjava.md  benchmarkjava.yaml  cvefixes.md  semgreptest.md  semgreptest.yaml
docs/datasets/data/: cvefixes.yaml  semgreptest.yaml
docs/datasets/profiles/: benchmarkjava.yaml  cvefixes.yaml  semgrepcerules.yaml  semgreptest.yaml
docs/home/: quick_start_guide.md
docs/sast/: index.md
docs/sast/profiles/: bearer.yaml  coverity.yaml  cppcheck.yaml  semgrepce.yaml  snykcode.yaml  spotbugs.yaml
docs/sasts/: api.md  coverity.md  semgrep.md
docs/sasts/data/: coverity.yaml  semgrep.yaml
docs/sasts/profiles/: coverity.yaml  semgrep_pro.yaml  semgrepce.yaml
docs/templates/: datasets.md.j2  profile.md.j2  profile.yaml  profiles.md.j2  sasts.md.j2
home/: quick_start_guide.html
sast/: index.html
sast/profiles/: bearer.yaml  coverity.yaml  cppcheck.yaml  semgrepce.yaml  snykcode.yaml  spotbugs.yaml
sast/supported/: bearer.j2.html  coverity.j2.html  cppcheck.j2.html  index.html  semgrepce.j2.html  snykcode.j2.html  spotbugs.j2.html
sastbenchmark/: main.py  utils.py
sastbenchmark/data/cwe/: __init__.py
sastbenchmark/datasets/: __init__.py
sastbenchmark/datasets/BenchmarkJava/: dataset.py
sastbenchmark/datasets/CVEfixes/: dataset.py  extract.py
sastbenchmark/datasets/SemgrepTest/: dataset.py  helper.py
sastbenchmark/datasets/_base/: dataset.py
sastbenchmark/datasets/_core/: dataset.py
sastbenchmark/sasts/: __init__.py
sasts/: __init__.py
sasts/Coverity/: cli.py  parser.py  sast.py
sasts/Semgrep/: cli.py  constants.py  parser.py  sast.py
sasts/_base/: cli.py  graphics.py  parser.py  sast.py
search/: search_index.js  search_index.json
tests/: Dockerfile  conftest.py  test_all_sasts.py  test_cli.py  test_datasets.py  test_sasts.py
(+62 files in other folders)
