[project]
name = "SASTBenchmark"
version = "0.1.0"
description = "Scripts and wrappers for SASTs and datasets, with abstractions to support integration, benchmarking, and testing."
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
  {name = "nolliv22"},
]
dependencies = [
    "blessed>=1.21.0",
    "click>=8.2.1",
    "gitpython>=3.1.44",
    "humanize>=4.12.3",
    "inquirer>=3.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-click>=0.9.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material[imaging]>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.8",
]

[project.scripts]
sastb = "sastbenchmark.main:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sastbenchmark", "sastbenchmark.*"]

[tool.setuptools]
include-package-data = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "TC",  # flake8-type-checking
  "D",   # pydocstyle
]
ignore = [
  "E501", # Line Too Long
]
