[project]
name = "CodeSecTools"
version = "0.5.0"
description = "A framework for code security that provides abstractions for static analysis tools and datasets to support their integration, testing, and evaluation."
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
  {name = "nolliv22"},
]
dependencies = [
    "gitpython>=3.1.44",
    "humanize>=4.12.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
    "xmltodict>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/OPPIDA/CodeSecTools"
Documentation = "https://oppida.github.io/CodeSecTools/"
Repository = "https://github.com/OPPIDA/CodeSecTools"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-click>=0.9.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material[imaging]>=9.6.16",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocstrings[python]>=0.30.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.8",
]
test = [
    "pytest>=8.4.1",
]

[project.scripts]
cstools = "codesectools.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["codesectools", "codesectools.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
codesectools = ["data/**/*"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "TC",  # flake8-type-checking
  "D",   # pydocstyle
]
ignore = [
  "E501", # Line Too Long
  "D203", "D213" # Conflict
]

[tool.pytest.ini_options]
addopts = "-x --showlocals -vvv"
log_cli = true
log_level = "INFO"
